--- a/Project/Storybord/Base.lproj/Main.storyboard
+++ b/Project/Storybord/Base.lproj/Main.storyboard
@@ -401,32 +401,33 @@
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="UQr-xd-bfv" customClass="DetailTableViewCell" customModule="Project" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="384" height="30"/>
+                                        <rect key="frame" x="0.0" y="28" width="384" height="30.666666030883789"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UQr-xd-bfv" id="UXH-xa-zWt">
-                                            <rect key="frame" x="0.0" y="0.0" width="384" height="30"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="384" height="30.666666030883789"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="漢字" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBY-9B-PcP">
-                                                    <rect key="frame" x="10" y="7.6666666666666661" width="32.666666666666664" height="19.333333333333336"/>
+                                                    <rect key="frame" x="10" y="7.9999999999999982" width="32.666666666666664" height="19.333333333333329"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Кандзи, название японских иероглифов" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ujw-Qd-svr">
-                                                    <rect key="frame" x="47.666666666666657" y="5" width="321.33333333333337" height="20"/>
+                                                    <rect key="frame" x="47.666666666666657" y="5" width="321.33333333333337" height="20.666666666666668"/>
                                                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="かんじ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRy-S7-vXX">
-                                                    <rect key="frame" x="10" y="0.66666666666666696" width="32.666666666666664" height="9.6666666666666643"/>
+                                                    <rect key="frame" x="10" y="1" width="32.666666666666664" height="9.6666666666666661"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="tBY-9B-PcP" firstAttribute="top" relation="greaterThanOrEqual" secondItem="UXH-xa-zWt" secondAttribute="top" constant="7.6666666666666661" id="30C-jb-sfU"/>
                                                 <constraint firstItem="tBY-9B-PcP" firstAttribute="leading" secondItem="UXH-xa-zWt" secondAttribute="leading" constant="10" id="3oh-k1-qgi"/>
                                                 <constraint firstItem="mRy-S7-vXX" firstAttribute="leading" secondItem="tBY-9B-PcP" secondAttribute="leading" id="IBV-8R-t5j"/>
                                                 <constraint firstAttribute="bottom" secondItem="ujw-Qd-svr" secondAttribute="bottom" constant="5" id="Lrf-f8-BPy"/>
